--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <button (click)="enviarMsg()">Enviar Alerta</button>
 <app-lista-pessoa></app-lista-pessoa> 
 <app-interpolation-binding></app-interpolation-binding>
-<app-property-binding></app-property-binding>-->
-<app-two-way-binding></app-two-way-binding>
+<app-property-binding></app-property-binding>
+<app-two-way-binding></app-two-way-binding> -->
+<app-ng-if></app-ng-if>
