--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
 <app-lista-pessoa></app-lista-pessoa> 
 <app-interpolation-binding></app-interpolation-binding>
 <app-property-binding></app-property-binding>
-<app-two-way-binding></app-two-way-binding> -->
+<app-two-way-binding></app-two-way-binding>
 <app-ng-if></app-ng-if>
+<app-ng-switch-case></app-ng-switch-case>
+<app-ng-for></app-ng-for> -->
+<app-ng-class></app-ng-class>
